--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "client": "npm start --prefix client",
     "server": "nodemon server/index.js",
     "dev": "concurrently \"npm run server\" \"npm run client\"",
-    "build": "npm run build --prefix client",
-    "install-all": "npm install && cd client && npm install"
+    "build": "cd client && npm install && npm run build",
+    "install-all": "npm install && cd client && npm install",
+    "start": "NODE_ENV=production node server/index.js"
   },
   "keywords": ["laminates", "enterprise", "react", "nodejs"],
   "author": "Vaishali Enterprise",
