--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "vaishali-enterprise-client",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://milanpatel1604.github.io/Vaishali-Enterprise",
+  "homepage": ".",
   "dependencies": {
     "axios": "^1.6.2",
     "framer-motion": "^10.16.16",
